# IsoDesign

./: .gitignore  Isodesign.ipynb  README.md  pyproject.toml  readthedocs.yaml
docs/: conf.py  index.rst  installation.rst  library_doc.rst  license.rst  quickstart.rst  reference.rst  requirements.txt  tutorial.rst
docs/source/: conf.py  index.rst
isodesign/: __init__.py  __main__.py  io.py
isodesign/base/: calculation.py  isotopomer.py  label_input.py  process.py  score.py
isodesign/process/: calculation.py
isodesign/test-data/: design_test.mflux  design_test.netw  design_test.tvar  design_test_1.linp  design_test_2.linp  design_test_3.linp  design_test_4.linp  design_test_5.linp  design_test_6.linp  design_test_7.linp  design_test_8.linp  design_test_9.linp  e_coli.mflux  e_coli.miso  e_coli.netw  e_coli.tvar
isodesign/test-data/acetate_LLE/: design_test_1.linp  design_test_1.mflux  design_test_1.miso  design_test_1.netw
isodesign/test_data/acetate_LLE/: design_test_1.cnstr  design_test_1.tvar
isodesign/test_data/acetate_LLE/tmp_isodesign/: file_05.linp  file_08.linp  file_09.linp  file_10.linp  files_combinations.txt  parallel.R
isodesign/test_data/acetate_LLE/tmp_isodesign/file_01_res/: file_01.tvar.sim
isodesign/test_data/acetate_LLE/tmp_isodesign/file_02_res/: file_02.tvar.sim
isodesign/test_data/acetate_LLE/tmp_isodesign/file_03_res/: file_03.tvar.sim
isodesign/tests/: conftest.py  test_base.py  test_isodesign.py  test_process.py
isodesign/ui/: Home.py  Load_data.py  Upload_data.py
isodesign/ui/gui/: page_1.py
isodesign/ui/pages/: 2_Define_label_inputs.py  2_Generate_labels_input.py  2_Labels_input.py  2_Substrates_selection.py  3_Influx_simulation.py  3_Run_simulations.py  3_Simulation_options.py  4_Analysis.py  4_Analyze_results.py  4_Results.py  4_Results_analysis.py
test_mtf/: file_01.linp  file_02.linp  file_03.linp  file_04.linp  file_06.linp  file_07.linp  file_11.linp  files_combinations.txt
test_mtf/file_01_res/: file_01.tvar.sim
test_mtf/file_02_res/: file_02.tvar.sim
test_mtf/file_03_res/: file_03.tvar.sim
test_mtf/file_04_res/: file_04.tvar.sim
test_mtf/file_05_res/: file_05.tvar.sim
test_mtf/file_06_res/: file_06.tvar.sim
test_mtf/file_07_res/: file_07.tvar.sim
test_mtf/file_08_res/: file_08.tvar.sim
test_mtf/file_09_res/: file_09.tvar.sim
test_mtf/file_10_res/: file_10.tvar.sim
(+8 files in other folders)
