[tool.poetry]
name = "isodesign"
version = "0.1.0"
description = ""
authors = ["llegregam <legregam@insa-toulouse.fr>"]
readme = "README.md"

[tool.poetry.scripts]
isodesign = 'isodesign.__main__:main'

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^2.0.1"
influx-si = "^7.0.3"
streamlit = "^1.36.0"
sess-i = "^0.1.0"
openpyxl = "^3.1.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
