[tool.poetry]
name = "isodesign"
version = "0.3.0"
description = "Facilitates the choice of the optimal isotopic composition of labeled substrates in 13C-fluxomics experiments."
authors = ["rkouakou <kouakou@insa-toulouse.fr>, llegregam <legregam@insa-toulouse.fr>"]
readme = "README.md"

[tool.poetry.scripts]
isodesign = 'isodesign.__main__:main'

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.1.4"
numpy = "^2.0.1"
influx-si = ">=7.0.0, <=7.0.3"
streamlit = "^1.36.0"
sess-i = "^0.1.0"
openpyxl = "^3.1.5"
plotly = "^5.23.0"
kaleido = "^0.2.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-argparse = "^0.5.2"
sphinx-rtd-theme = "^3.0.2"
pandoc = "^2.4"
nbsphinx = "^0.9.5"
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
